[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -34.0
margin_right = 132.5
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="VBoxContainer"]
margin_right = 265.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../quit")
text = "Start"

[node name="Pantera" type="HSlider" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 265.0
margin_bottom = 40.0
min_value = 1.0
max_value = 10.0
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="Monster" type="HSlider" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 265.0
margin_bottom = 60.0
min_value = 1.0
max_value = 10.0
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="AI" type="HSlider" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 265.0
margin_bottom = 80.0
min_value = 1.0
max_value = 5.0
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="quit" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 265.0
margin_bottom = 104.0
focus_neighbour_bottom = NodePath("../start")
text = "Quit"

[node name="panteraText" type="Label" parent="."]
margin_left = 229.0
margin_top = 291.0
margin_right = 494.0
margin_bottom = 305.0
text = "Small Enemy Count "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="truckText" type="Label" parent="."]
margin_left = 230.0
margin_top = 310.0
margin_right = 495.0
margin_bottom = 324.0
text = "Large Enemy Count "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="difficultyText" type="Label" parent="."]
margin_left = 259.0
margin_top = 329.0
margin_right = 524.0
margin_bottom = 343.0
text = "AI Intelligence "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="value_changed" from="VBoxContainer/Pantera" to="." method="_on_Pantera_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Monster" to="." method="_on_Monster_value_changed"]
[connection signal="value_changed" from="VBoxContainer/AI" to="." method="_on_AI_value_changed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
